# x3

./: CMakeLists.txt  CMakePresets.json  README.adoc  README.md  bootstrap.cmake
docs/: xml11.bnf
lib/: CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/hyperscan/: CMakeLists.txt  patch-hyperscan.cmake
lib/ragel/: CMakeLists.txt  patch-ragel.cmake
utils/: transform-readme.cmake
